# Ray

./: CMakeLists.txt  Readme.md  run.sh
buildlin/: CMakeCache.txt  Makefile  Ray  cmake_install.cmake
buildthread/: CMakeCache.txt  Makefile  Ray  cmake_install.cmake
bulidlin/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  rtweekend.h  sphere.h  threadrender.h  vec3.h
